--- a/SalesManagementSystem_wf.csproj
+++ b/SalesManagementSystem_wf.csproj
@@ -67,6 +67,12 @@
     <Compile Include="PL\frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="PL\frmMenageCategories.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PL\frmMenageCategories.Designer.cs">
+      <DependentUpon>frmMenageCategories.cs</DependentUpon>
+    </Compile>
     <Compile Include="PL\frmMenageProducts.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PL\frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PL\frmMenageCategories.resx">
+      <DependentUpon>frmMenageCategories.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PL\frmMenageProducts.resx">
       <DependentUpon>frmMenageProducts.cs</DependentUpon>
