--- a/SalesManagementSystem_wf.csproj
+++ b/SalesManagementSystem_wf.csproj
@@ -61,6 +61,12 @@
     <Compile Include="PL\frmAddProduct.Designer.cs">
       <DependentUpon>frmAddProduct.cs</DependentUpon>
     </Compile>
+    <Compile Include="PL\frmCustomersList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PL\frmCustomersList.Designer.cs">
+      <DependentUpon>frmCustomersList.cs</DependentUpon>
+    </Compile>
     <Compile Include="PL\frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -85,6 +91,12 @@
     <Compile Include="PL\frmMenageProducts.Designer.cs">
       <DependentUpon>frmMenageProducts.cs</DependentUpon>
     </Compile>
+    <Compile Include="PL\frmOrders.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PL\frmOrders.Designer.cs">
+      <DependentUpon>frmOrders.cs</DependentUpon>
+    </Compile>
     <Compile Include="PL\frmShowImage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,6 +111,9 @@
     <EmbeddedResource Include="PL\frmAddProduct.resx">
       <DependentUpon>frmAddProduct.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PL\frmCustomersList.resx">
+      <DependentUpon>frmCustomersList.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PL\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
@@ -110,6 +125,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PL\frmMenageProducts.resx">
       <DependentUpon>frmMenageProducts.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PL\frmOrders.resx">
+      <DependentUpon>frmOrders.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PL\frmShowImage.resx">
       <DependentUpon>frmShowImage.cs</DependentUpon>
