--- a/SalesManagementSystem_wf.csproj
+++ b/SalesManagementSystem_wf.csproj
@@ -97,6 +97,12 @@
     <Compile Include="PL\frmOrders.Designer.cs">
       <DependentUpon>frmOrders.cs</DependentUpon>
     </Compile>
+    <Compile Include="PL\frmProductsList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PL\frmProductsList.Designer.cs">
+      <DependentUpon>frmProductsList.cs</DependentUpon>
+    </Compile>
     <Compile Include="PL\frmShowImage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -128,6 +134,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PL\frmOrders.resx">
       <DependentUpon>frmOrders.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PL\frmProductsList.resx">
+      <DependentUpon>frmProductsList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PL\frmShowImage.resx">
       <DependentUpon>frmShowImage.cs</DependentUpon>
